<resources>
    <string name="app_name">Ambahealth</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="save_result">Simpan Hasil</string>
    <string name="view_history">History</string>
    <string name="cancer_quote">“Jangan Lihat Sehitam Apa yang Mengucap, Tetapi Lihat Seterang Apa yang Di Ucap”</string>
    <string name="delete_history"></string>
    <string name="delete_item">Delete item</string>
    <string name="company_name">Julian Kiyosaki</string>
    <string name="app_tagline">Sakit hati aku wak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>