<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_gradient"
    tools:context=".view.SplashActivity">

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"
            android:elevation="8dp"
            android:contentDescription="App Logo"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/appNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/monst"/>

        <TextView
            android:id="@+id/taglineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_tagline"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:alpha="0.8"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/monst"/>
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/companyText"
        android:layout_marginBottom="40dp"
        android:indeterminate="true"
        app:indicatorColor="@color/colorPrimary"
        app:trackColor="@color/white"/>

    <TextView
        android:id="@+id/companyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/company_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:alpha="0.6"
        android:layout_alignParentBottom="true"/>

    <ImageView
        android:id="@+id/decorativeShape1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/circle_shape"
        android:tint="@color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="-100dp"
        android:layout_marginTop="-100dp"/>

    <ImageView
        android:id="@+id/decorativeShape2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/triangle_shape"
        android:tint="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-75dp"
        android:layout_marginBottom="-75dp"/>

</RelativeLayout>